--- a/style.css
+++ b/style.css
@@ -1,13 +1,47 @@
 body {
-  font-family: 'Dosis', sans-serif;
+  font-family: "Dosis", sans-serif;
   font-weight: 500;
 }
 
 a {
   color: orange;
 }
-
 a:hover {
   color: black;
 }
-/*# sourceMappingURL=style.css.map */
+
+.box {
+  text-align: center;
+  border: 1px solid #9c6644;
+  border-radius: 30px;
+  background-color: #9c6644;
+  color: #ffffff;
+  width: 300px;
+  margin: 70px 0;
+  padding: 40px;
+}
+.box h1 {
+  font-weight: 700;
+  font-size: 40px;
+}
+.box input {
+  border-radius: 30px;
+  margin: 30px 0;
+  padding: 20px;
+}
+.box .btn {
+  border-radius: 30px;
+  background-color: #ffffff;
+  padding: 10px 20px;
+}
+
+h3 {
+  font-size: 28px;
+  color: #000000;
+  border: 1px solid #000000;
+  border-radius: 20px;
+  padding: 10px;
+  width: 200px;
+  margin-bottom: 10px;
+  text-align: center;
+}/*# sourceMappingURL=style.css.map */
